# aicoref_exercise

./: .pre-commit-config.yaml  README.md  pyproject.toml
artifacts/: best_ml_pipeline.joblib  binary_features.json  training_features.json
notebooks/: explore.ipynb  xgboost_tuning.ipynb
src/api_server/: cli.py  main.py  models.py  query.py  serve.py
src/ferocia_takehome/: __init__.py
src/trainer/: train.py
src/utils/: __init__.py
